--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,19 @@
         }
     ],
     "require": {
-        "php": "^7.4",
-        "symfony/framework-bundle": "^5.4",
-        "spipu/core-bundle":   "^2.0",
-        "spipu/ui-bundle":     "^2.0"
+        "php": "^8.1",
+        "symfony/framework-bundle": "^6.4",
+        "spipu/core-bundle": "^4.0",
+        "spipu/ui-bundle": "^4.0"
     },
     "autoload": {
         "psr-4": {
-            "Spipu\\ApiPartnerBundle\\": "./"
+            "Spipu\\ApiPartnerBundle\\": "./src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Spipu\\ApiPartnerBundle\\Tests\\": "./tests/"
         }
     }
 }
